customized to display just one post with a link to rdio

--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
         <title>Last.fm Widget</title>
     </head>
     <body>
-        <table id="last_fm_tracks">
-            <tr class="loading">
-                <td>Loading from Last.fm</td>
-            </tr>
-        </table>
+        <p id="listeningto"></p>
         <script type="text/javascript" src="last_widget.js"></script>
         <script type="text/javascript">
-            loadLastFMTracks('xtranophilist');
+            loadListeningTo('pietvanzoen', 'listeningto');
         </script>
     </body>
 </html>
